Fix description section on tablet screen

--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -109,4 +109,17 @@ section {
 
         gap: 0.6875rem;
     }
+
+    section {
+        h2 {
+            font-size: 2.5rem;
+            line-height: 2.75rem;
+            padding: 0 9.5rem;
+        }
+
+        .description {
+            padding: 0 6rem;
+            margin-bottom: 5rem;   
+        }
+    }
 }
